# alfred

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  refactor-2026-04-16.patch
src/: agent.py  auth.py  bot.py  config.py  formatter.py  kb.py  main.py  mcp_client.py  prompts.py  routes.py  run_bot.py  tg.py
src/commands/: services.py
src/routes/: alert.py  things.py
src/skills/: __init__.py  base.py  registry.py
src/skills/checkout/: __init__.py  flow.py
src/skills/things/: __init__.py  executor.py  tools.py
tests/: test_alert.py  test_routes.py  test_services_commands.py
